--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -640,7 +640,9 @@ a.back-to-top:focus {
   -o-animation: fadeIn 0.4s;
   -ms-animation: fadeIn 0.4s;
 }
-
+.img-fluid {
+  object-fit: cover;
+}
 .dropdown .dropdown-menu .dropdown-item {
   width: 100%;
   padding: 12px 20px;
@@ -749,7 +751,7 @@ a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 .hero-area-bg {
-  background: url(../img/hero-area.jpg) no-repeat;
+  background: url() no-repeat;
   background-size: cover;
 }
 
@@ -952,7 +954,7 @@ a:not([href]):not([tabindex]):hover {
 .services-item {
   background: #fff;
   border-radius: 4px;
-  padding: 48px 20px;
+  /*padding: 48px 20px;*/
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   transition: all 0.3s ease-in-out 0s;
@@ -973,10 +975,13 @@ a:not([href]):not([tabindex]):hover {
 } */
 
 .services-item .services-content h3 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
-
+.services-content {
+  height: 50px;
+  padding-top: 20px;
+}
 .services-item .services-content h3 a {
   font-size: 18px;
   text-transform: uppercase;
@@ -1083,7 +1088,7 @@ a:not([href]):not([tabindex]):hover {
   color: #d9534f;
 }
 
-#conatiner-map {
+/* #conatiner-map {
   margin-top: 30px;
   text-align: center;
   background-color: #fff;
@@ -1093,11 +1098,12 @@ a:not([href]):not([tabindex]):hover {
   transition: all 0.3s;
   z-index: 101;
   width: 100%;
-}
+} */
 
 /* Footer Area Start */
 .footer-area {
   background: #1c1c20;
+  height: 10px;
 }
 
 .footer-area .footer-text p {
@@ -1174,5 +1180,6 @@ a:not([href]):not([tabindex]):hover {
   height: 270px;
 }
 .photoPortfolio {
-  height: 250 px;
+  height: 350px;
+  object-fit: cover;
 }
