--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -751,7 +751,7 @@ a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 .hero-area-bg {
-  background: url() no-repeat;
+  background: no-repeat url("../img/gallery/background.png");
   background-size: cover;
 }
 
